@@ -1,5 +1,14 @@
 2008-09-11  Ulrich Weigand  <uweigand@de.ibm.com>
 
+	* expression.h (enum exp_opcode): Document OP_COMPLEX to take
+	a type parameter as expression element.
+	* eval.c (evaluate_subexp_standard) [OP_COMPLEX]: Retrieve result
+	type as expression element.
+	* f-exp.y: Pass in type when buildin OP_COMPLEX expression.
+	* parse.c (operator_length_standard): Update length of OP_COMPLEX.
+
+2008-09-11  Ulrich Weigand  <uweigand@de.ibm.com>
+
 	* language.h (struct language_arch_info): New members
 	bool_type_default and bool_type_symbol.
 	(lang_bool_type): Remove prototype.
